Added Script for History Data

--- a/notebooks/energy_trend_visualisation.ipynb
+++ b/notebooks/energy_trend_visualisation.ipynb
@@ -129,78 +129,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fuel</th>\n",
-       "      <th>perc</th>\n",
-       "      <th>timestamp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>biomass</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>2025-05-03 14:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>coal</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2025-05-03 14:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>imports</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>2025-05-03 14:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>gas</td>\n",
-       "      <td>10.7</td>\n",
-       "      <td>2025-05-03 14:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>nuclear</td>\n",
-       "      <td>10.7</td>\n",
-       "      <td>2025-05-03 14:30:00+00:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      fuel  perc                 timestamp\n",
-       "0  biomass   4.5 2025-05-03 14:30:00+00:00\n",
-       "1     coal   0.0 2025-05-03 14:30:00+00:00\n",
-       "2  imports   8.7 2025-05-03 14:30:00+00:00\n",
-       "3      gas  10.7 2025-05-03 14:30:00+00:00\n",
-       "4  nuclear  10.7 2025-05-03 14:30:00+00:00"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 63 entries, 0 to 62\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column     Non-Null Count  Dtype              \n",
+      "---  ------     --------------  -----              \n",
+      " 0   fuel       63 non-null     object             \n",
+      " 1   perc       63 non-null     float64            \n",
+      " 2   timestamp  63 non-null     datetime64[ns, UTC]\n",
+      "dtypes: datetime64[ns, UTC](1), float64(1), object(1)\n",
+      "memory usage: 1.6+ KB\n"
+     ]
     }
    ],
    "source": [
@@ -214,7 +156,7 @@
     "df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"])\n",
     "\n",
     "df.head()\n",
-    "\n",
+    "df.info()\n",
     "\n"
    ]
   },
